# freshdata

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  QUALITY_OPS.md  README.md  RELEASE.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
api-reference/: index.html
backends/: index.html
benchmarks/: bench_streaming.py  index.html
cleaning-engine/: index.html
community/first-pr/: index.html
community/labels/: index.html
compliance/: index.html
contributing/: index.html
data-profiling/: index.html
docs/: api-reference.md  backends.md  benchmarks.md  cleaning-engine.md  compliance.md  contributing.md  data-profiling.md  examples.md  faq.md  feature-overview.md  index.md  installation.md  parsers.md  quickstart.md  streaming.md
examples/: 01_missing_values.py  02_outliers.py  03_normalization.py  04_profiling.py  05_ml_pipeline.py  06_large_dataset.py  07_pandas_integration.py  08_csv_automation.py  README.md  entity_resolution_duckdb.py  index.html  privacy_anonymization.py  schema_drift_monitoring.py
faq/: index.html
feature-overview/: index.html
installation/: index.html
integrations/: index.html
notebooks/: 01_quickstart.ipynb  02_profiling_deep_dive.ipynb  03_ml_preprocessing.ipynb
parsers/: index.html
quickstart/: index.html
scripts/: debug_dataset_sweep.py
search/: search_index.json
src/freshdata/: __init__.py  _sentinels.py  api.py  cleaner.py  config.py  duplicate_defense.py  explain.py  findings.py  plan.py  report.py
src/freshdata/adapters/: polars.py
src/freshdata/compliance/: _21cfr11.py  __init__.py  _adapter.py  _alcoa.py  _base.py  _gdpr.py  _hipaa.py  _sox404.py
src/freshdata/domains/: __init__.py  base.py  reference.py  registry.py
src/freshdata/engine/: __init__.py  context.py  missing.py  model_select.py  outliers.py  utils.py
src/freshdata/enterprise/: __init__.py  cleaner.py  cli.py  config.py  contracts.py  entity_resolution.py  interface.py  lineage.py  privacy.py  privacy_policy.py
src/freshdata/execution/: __init__.py  _config.py  _lazy.py  _metadata.py  _native_steps.py  _plan.py
src/freshdata/integrations/: exceptions.py  great_expectations.py  quality_ops.py
streaming/: index.html
tests/: conftest.py  expectations.py  golden_util.py  test_api.py  test_benchmark.py  test_compare_matrix.py  test_config_tuple_coercion.py  test_config_tuple_fixtures.py  test_dtypes.py  test_engine_api.py  test_engine_duplicates.py  test_engine_missing.py  test_engine_outliers.py  test_enterprise_contracts.py  test_enterprise_entity_resolution.py  test_enterprise_features_edge.py  test_enterprise_privacy.py  test_expectations_preflight.py  test_findings.py  test_golden.py  test_json_value.py  test_memory.py  test_missing.py  test_outliers.py  test_plan.py  test_privacy_policy.py  test_realworld.py  test_regressions.py  test_report.py  test_streaming_cleaner.py  test_streaming_cli.py  test_streaming_reports.py  test_streaming_state.py  test_strings.py
tests/domains/: test_energy.py  test_finance_tick.py  test_healthcare.py  test_healthcare_resources.py  test_reference.py  test_retail.py  test_spec_conformance.py  test_transport.py
tests/parsers/: test_edifact.py  test_fhir.py  test_gpx.py  test_hl7v2.py  test_registry_and_api.py  test_sdmx.py
tests/test_compliance/: conftest.py  test_21cfr11.py  test_alcoa.py  test_bundle.py  test_gdpr.py  test_hipaa.py  test_sox404.py
tests/test_execution/: conftest.py  test_arrow_interop.py  test_cli_engine.py  test_dispatch_and_config.py  test_engine_selector.py  test_native_steps.py  test_native_steps_units.py  test_plan_generator.py  test_spark_engine.py
tests/test_integrations/: test_dbt_tests_exporter.py  test_exceptions.py  test_great_expectations.py  test_imports.py  test_quality_ops.py
(+55 files in other folders)
